--- a/index.html
+++ b/index.html
@@ -284,6 +284,11 @@
                         <td>75,3 anos</td>
                         <td>Ligeiramente abaixo da média nacional (76,8 anos)</td>
                     </tr>
+                    <tr>
+                        <td>Taxa de fecundidade</td>
+                        <td>2.06</td>
+                        <td>Maior taxa de fecundidade do país</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
